tests/fail/mac8.stderr
error: Invalid length of 17 characters
 --> tests/fail/mac8.rs:4:19
  |
4 |     let a = mac8!("ca:fe:ca:fe:ca:fe");
  |                   ^^^^^^^^^^^^^^^^^^^
